# jeeves

./: .env.example  .gitignore  BOOTLOADER.md  Makefile  README.md  alembic.ini  check_provider.sh  clean_deploy.sh  clean_deploy_out.txt  docker-compose.yml  fix_provider.sh  fix_provider_out.txt  output.txt  output2.txt  pyproject.toml  redeploy.sh  redeploy_output.txt  server_setup.sh  server_setup_out.txt  stage21_deploy.sh  stage21_deploy_out.txt  stage22_deploy_out.txt  stage23_deploy.sh  stage23_deploy_out.txt  stage2_deploy.sh  stage2_deploy_out.txt  tailnet_pass_out.txt  temp.sh
app/: main.py
app/actions/: __init__.py  contracts.py
app/agents/: base.py  executor_agent.py  (+3 more)
knowledge-base/: 01_PROJECT_OVERVIEW.md  02_ARCHITECTURE_AND_PRINCIPLES.md  03_IMPLEMENTATION_STATE.md  04_COORDINATION_AND_AGENTS.md  05_ACTION_LAYER.md  06_MEMORY_AND_HANDOFF.md  07_KNOWLEDGE_BASE_SUBSYSTEM.md  08_MODEL_PROVIDER_AND_SKILLS_STRATEGY.md  09_ECOSYSTEM_WATCHLIST.md  10_SECURITY_AND_RELEASE_HYGIENE.md  11_CONTINUATION_GUIDE_AND_NEXT_STEPS.md  12_DEPLOYMENT_AND_FAMILY_RUNTIME.md  PROJECT_KNOWLEDGE_BASE.md  README.md
knowledge_base/: CHATGPT_BRANCH_CONTINUITY_BOOT.md  CHATGPT_EXOSKELETON.md  CHATGPT_EXOSKELETON_RUNBOOK.md  CHATGPT_EXTERNAL_DIARY_PROTOCOL.md  CHATGPT_SETTINGS_STARTER.md  MEMORY_POLICY.md  START_HERE_FOR_CHATGPT.md  WORKING_PROTOCOL.md  assistant_diary.md  assistant_startup_prompt.md
migrations/: env.py
scripts/: validate.py
tests/: conftest.py  test_action_contracts.py  test_ask_smoke.py  test_health.py  test_policy.py  test_router.py  test_stage2.py
(+79 files in other folders)
